test/Fail/UnquoteDefineDataOverFun.err
UnquoteDefineDataOverFun.agda:9.1-10.20: error: [Unquote.DefineDataNotData]
foo is not declared as a datatype or record, or it already has a
definition.
